refactor: home 도메인 코드리뷰 반영